--- a/src/pages/mobileDemos.styles.scss
+++ b/src/pages/mobileDemos.styles.scss
@@ -69,8 +69,6 @@
 
       @include tablet {
         font-size: 1.75em;
-        width: 100%;
-        text-align: center;
       }
 
       @include phone {
