--- a/src/pages/product.styles.scss
+++ b/src/pages/product.styles.scss
@@ -335,21 +335,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 40px 0;
+  justify-content: space-around;
+  margin: 30px 0;
+  height: 100%;
 
   .subheader {
     @include subheader-font;
     font-size: 2.25em;
     font-weight: 400;
-    margin: 0;
     color: $bgc-medium-grey;
 
-    @include phone {
-      font-size: 1.75em;
-    }
-
-    @include smallPhone {
-      font-size: 1.5em;
+    @include tabletLandscape {
+      font-size: 2em;
     }
   }
 
@@ -360,6 +357,10 @@
     justify-content: center;
     width: 85%;
     height: 390px;
+
+    @include tabletLandscape {
+      height: 270px;
+    }
   }
 
   .relatedItem {
@@ -372,6 +373,13 @@
     margin: 20px;
     padding: 20px;
     white-space: nowrap;
+
+    @include tabletLandscape {
+      width: 250px;
+      height: 250px;
+      padding: 15px;
+      margin: 10px;
+    }
 
     .link {
       text-decoration: none;
@@ -392,6 +400,10 @@
       padding: 0;
       margin: 0;
       align-self: center;
+
+      @include tabletLandscape {
+        font-size: 1em;
+      }
     }
 
     .productImgContainer {
@@ -399,11 +411,11 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 90%;
+      height: 100%;
 
       .productImage {
-        width: 90%;
-        height: 90%;
+        width: 80%;
+        height: 80%;
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
@@ -487,7 +499,6 @@
       justify-content: center;
       left: 0;
       width: 100%;
-      height: 100%;
     }
   }
 }
